# src/main/java/org/cdpg/dx/acl/policy/controller/PolicyController.java
@@ -6,33 +6,49 @@ import static org.cdpg.dx.acl.accessRequest.config.Constants.CONTENT_TYPE;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.CREATE_POLICY_API;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.DELETE_POLICY_API;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.DETAIL;
+import static org.cdpg.dx.acl.accessRequest.config.Constants.GET_POLICIES_CONSUMER_API;
+import static org.cdpg.dx.acl.accessRequest.config.Constants.GET_POLICIES_FOR_COS_ADMIN_API;
+import static org.cdpg.dx.acl.accessRequest.config.Constants.GET_POLICIES_FOR_ORG_ADMIN_API;
+import static org.cdpg.dx.acl.accessRequest.config.Constants.GET_POLICIES_PROVIDER_API;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.GET_POLICY_API;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.HEADER_X_CONTENT_TYPE_OPTIONS;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.ID;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.TITLE;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.VERIFY_API;
 import static org.cdpg.dx.acl.accessRequest.config.Constants.X_CONTENT_TYPE_OPTIONS_NOSNIFF;
+import static org.cdpg.dx.acl.accessRequest.dao.config.DbConstants.DB_ASSET_ORGANIZATION_ID;
+import static org.cdpg.dx.acl.accessRequest.dao.config.DbConstants.DB_CREATED_AT;
+import static org.cdpg.dx.acl.accessRequest.dao.config.DbConstants.DB_EXPIRY_AT;
+import static org.cdpg.dx.acl.accessRequest.dao.config.DbConstants.DB_STATUS;
+import static org.cdpg.dx.acl.accessRequest.dao.config.DbConstants.DB_UPDATED_AT;
+import static org.cdpg.dx.acl.policy.util.Constants.API_TO_DB_MAP;
 import static org.cdpg.dx.common.HttpStatusCode.BAD_REQUEST;
 import static org.cdpg.dx.common.ResponseUrn.BAD_REQUEST_URN;
 import static org.cdpg.dx.common.ResponseUtil.generateResponse;
+import static org.cdpg.dx.database.postgres.util.Constants.DEFAULT_SORTING_ORDER;
 
 import io.vertx.core.Handler;
 import io.vertx.core.http.HttpServerResponse;
 import io.vertx.core.json.DecodeException;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
+import io.vertx.ext.auth.User;
 import io.vertx.ext.web.RoutingContext;
 import io.vertx.ext.web.openapi.RouterBuilder;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.cdpg.dx.aaa.common.Constants;
-import org.cdpg.dx.apiserver.ApiController;
+import org.cdpg.dx.acl.policy.dao.model.PolicyDto;
 import org.cdpg.dx.acl.policy.service.PolicyService;
 import org.cdpg.dx.acl.policy.service.model.CreatePolicyRequest;
 import org.cdpg.dx.acl.policy.util.UserAccessHandler;
+import org.cdpg.dx.apiserver.ApiController;
 import org.cdpg.dx.auditing.handler.AuditingHandler;
 import org.cdpg.dx.auth.v2.handler.AuthenticationHandler;
 import org.cdpg.dx.auth.v2.handler.AuthorizationHandler;
@@ -44,6 +60,8 @@ import org.cdpg.dx.common.ResponseUrn;
 import org.cdpg.dx.common.URNGenerator;
 import org.cdpg.dx.common.exception.DxForbiddenException;
 import org.cdpg.dx.common.model.DxUser;
+import org.cdpg.dx.common.request.PaginatedRequest;
+import org.cdpg.dx.common.request.PaginationRequestBuilder;
 import org.cdpg.dx.common.response.ResponseBuilder;
 import org.cdpg.dx.common.util.RoutingContextHelper;
 import org.cdpg.dx.database.postgres.service.PostgresService;
@@ -90,6 +108,19 @@ public class PolicyController implements ApiController {
         authorizationV2.forScopesWithContext(
             ScopeRule.self(Scopes.OWN_ASSET_MANAGEMENT),
             ScopeRule.org(Scopes.ORG_ASSET_MANAGEMENT));
+    Handler<RoutingContext> cosAdminAccessHandler = authorizationV2.forScopes(Scopes.ASSET_MANAGEMENT);
+    Handler<RoutingContext> orgAdminAccessHandler = authorizationV2.forScopes(Scopes.ORG_ASSET_MANAGEMENT);
+    Handler<RoutingContext> providerAndOrgAdmin =
+        authorizationV2.forScopesWithContext(
+            ScopeRule.self(Scopes.OWN_ASSET_MANAGEMENT),
+            ScopeRule.org(Scopes.ORG_ASSET_MANAGEMENT));
+    Handler<RoutingContext> apiAccessHandler =
+        authorizationV2.forScopesWithContext(
+            ScopeRule.self(Scopes.OWN_ASSET_MANAGEMENT), ScopeRule.self(Scopes.DATA_ACCESS));
+    Handler<RoutingContext> apiAccessVerifyApiRole =
+        authorizationV2.forScopesWithContext(
+            ScopeRule.self(Scopes.OWN_ASSET_MANAGEMENT), ScopeRule.self(Scopes.DATA_ACCESS),
+            ScopeRule.org(Scopes.ORG_ASSET_MANAGEMENT));
     UserAccessHandler userAccessHandler = new UserAccessHandler(postgresService,
         keycloakUserService);
 
@@ -100,12 +131,38 @@ public class PolicyController implements ApiController {
         .handler(userAccessHandler)
         .handler(this::handleCreatePolicy);
 
-    builder.operation(GET_POLICY_API)
+//    builder.operation(GET_POLICY_API)
+//        .handler(auditingHandler::handleApiAudit)
+//        .handler(authenticationV2)
+//        .handler(selfOrConsumerAccess)
+//        .handler(userAccessHandler)
+//        .handler(this::handleGetPolicies);
+
+    builder
+        .operation(GET_POLICIES_CONSUMER_API)
+        .handler(auditingHandler::handleApiAudit)
+        .handler(this::getConsumerPoliciesHandler);
+
+    builder
+        .operation(GET_POLICIES_PROVIDER_API)
         .handler(auditingHandler::handleApiAudit)
         .handler(authenticationV2)
-        .handler(selfOrConsumerAccess)
-        .handler(userAccessHandler)
-        .handler(this::handleGetPolicies);
+        .handler(providerAndOrgAdmin)
+        .handler(this::getPoliciesHandler);
+
+    builder
+        .operation(GET_POLICIES_FOR_ORG_ADMIN_API)
+        .handler(auditingHandler::handleApiAudit)
+        .handler(authenticationV2)
+        .handler(orgAdminAccessHandler)
+        .handler(this::getOrganizationPoliciesHandler);
+
+    builder
+        .operation(GET_POLICIES_FOR_COS_ADMIN_API)
+        .handler(auditingHandler::handleApiAudit)
+        .handler(authenticationV2)
+        .handler(cosAdminAccessHandler)
+        .handler(this::getPlatformPoliciesHandler);
 
     builder.operation(DELETE_POLICY_API)
         .handler(auditingHandler::handleApiAudit)
@@ -120,6 +177,138 @@ public class PolicyController implements ApiController {
         .handler(verifyAccess)
         .handler(userAccessHandler)
         .handler(this::verifyRequestHandler);
+  }
+
+  private void getPlatformPoliciesHandler(RoutingContext ctx) {
+    LOGGER.info("Handling getPlatformPoliciesHandler request...");
+    User user = ctx.user();
+
+    Map<String, String> allowedFilters =
+        Map.of("status", DB_STATUS, "organizationId", DB_ASSET_ORGANIZATION_ID);
+    Set<String> allowedTimeFields = Set.of(DB_CREATED_AT, DB_UPDATED_AT, DB_EXPIRY_AT);
+    Set<String> allowedSortFields = API_TO_DB_MAP.keySet();
+
+    PaginatedRequest request =
+        PaginationRequestBuilder.from(ctx)
+            .allowedFiltersDbMap(allowedFilters)
+            .apiToDbMap(API_TO_DB_MAP)
+            .allowedTimeFields(allowedTimeFields)
+            .defaultTimeField(DB_CREATED_AT)
+            .defaultSort(DB_UPDATED_AT, DEFAULT_SORTING_ORDER)
+            .allowedSortFields(allowedSortFields)
+            .build();
+
+    LOGGER.info("PaginatedRequest getPlatformAccessRequestHandler for cos admin :  {}", request);
+
+    policyService
+        .listPolicies(request)
+        .compose(policyService::enrichPolicyRequestsWithItemDetails)
+        .compose(policyService::enrichPolicyRequestsWithUserInfo)
+        .onSuccess(
+            pagedResult -> {
+              LOGGER.info(
+                  "Successfully fetched access requests for cos admin user: {}", user.subject());
+              ResponseBuilder.sendSuccess(
+                  ctx,
+                  pagedResult.data().stream().map(PolicyDto::toJson).collect(Collectors.toList()),
+                  pagedResult.paginationInfo(),
+                  urnGenerator);
+            })
+        .onFailure(
+            err -> {
+              LOGGER.error("Error fetching access requests: {}", err.getMessage(), err);
+              ctx.fail(err);
+            });
+  }
+
+  private void getOrganizationPoliciesHandler(RoutingContext ctx) {
+    LOGGER.info("Handling getOrganizationPoliciesHandler request...");
+    User user = ctx.user();
+
+    String organizationId = RoutingContextHelper.fromPrincipal(ctx).organisationId();
+    Map<String, String> allowedFilters =
+        Map.of("status", DB_STATUS, "organizationId", DB_ASSET_ORGANIZATION_ID);
+    Map<String, Object> additionalFilters = Map.of(DB_ASSET_ORGANIZATION_ID, organizationId);
+    Set<String> allowedTimeFields = Set.of(DB_CREATED_AT, DB_UPDATED_AT, DB_EXPIRY_AT);
+    Set<String> allowedSortFields = API_TO_DB_MAP.keySet();
+
+    PaginatedRequest request =
+        PaginationRequestBuilder.from(ctx)
+            .allowedFiltersDbMap(allowedFilters)
+            .apiToDbMap(API_TO_DB_MAP)
+            .additionalFilters(additionalFilters)
+            .allowedTimeFields(allowedTimeFields)
+            .defaultTimeField(DB_CREATED_AT)
+            .defaultSort(DB_UPDATED_AT, DEFAULT_SORTING_ORDER)
+            .allowedSortFields(allowedSortFields)
+            .build();
+
+    LOGGER.info(
+        "PaginatedRequest getOrganizationAccessRequestHandler for org admin :  {}", request);
+
+    policyService
+        .listPolicies(request)
+        .compose(policyService::enrichPolicyRequestsWithItemDetails)
+        .compose(policyService::enrichPolicyRequestsWithUserInfo)
+        .onSuccess(
+            pagedResult -> {
+              LOGGER.info(
+                  "Successfully fetched access requests for org admin user: {}", user.subject());
+              ResponseBuilder.sendSuccess(
+                  ctx,
+                  pagedResult.data().stream().map(PolicyDto::toJson).collect(Collectors.toList()),
+                  pagedResult.paginationInfo(),
+                  urnGenerator);
+            })
+        .onFailure(
+            err -> {
+              LOGGER.error("Error fetching access requests: {}", err.getMessage(), err);
+              ctx.fail(err);
+            });
+  }
+
+  private void getPoliciesHandler(RoutingContext ctx) {
+    LOGGER.info("Handling getPolicies request...");
+    User user = ctx.user();
+
+    Map<String, String> allowedFilters =
+        Map.of("status", DB_STATUS, "organizationId", DB_ASSET_ORGANIZATION_ID);
+    Map<String, Object> additionalFilters = Map.of("owner_id", user.subject());
+    Set<String> allowedTimeFields = Set.of(DB_CREATED_AT, DB_UPDATED_AT, DB_EXPIRY_AT);
+    Set<String> allowedSortFields = API_TO_DB_MAP.keySet();
+
+    PaginatedRequest request =
+        PaginationRequestBuilder.from(ctx)
+            .allowedFiltersDbMap(allowedFilters)
+            .apiToDbMap(API_TO_DB_MAP)
+            .additionalFilters(additionalFilters)
+            .allowedTimeFields(allowedTimeFields)
+            .defaultTimeField("created_at")
+            .defaultSort("updated_at", DEFAULT_SORTING_ORDER)
+            .allowedSortFields(allowedSortFields)
+            .build();
+
+    LOGGER.info("PaginatedRequest created getAccessRequest for Provider :  {}", request);
+
+    policyService
+        .listPolicies(request)
+        .compose(policyService::enrichPolicyRequestsWithItemDetails)
+        .compose(policyService::enrichPolicyRequestsWithUserInfo)
+        .onSuccess(
+            pagedResult -> {
+              LOGGER.info(
+                  "Successfully fetched access requests for provider user: {}", user.subject());
+              ResponseBuilder.sendSuccess(
+                  ctx,
+                  pagedResult.data().stream().map(PolicyDto::toJson).collect(Collectors.toList()),
+                  pagedResult.paginationInfo(),
+                  urnGenerator);
+            })
+        .onFailure(
+            err -> {
+              LOGGER.error("Error fetching access requests: {}", err.getMessage(), err);
+              ctx.fail(err);
+            });
   }
 
   private void handleCreatePolicy(RoutingContext ctx) {
@@ -213,12 +402,12 @@ public class PolicyController implements ApiController {
     DxUser user = RoutingContextHelper.fromPrincipal(ctx);
     try {
       UUID ownerId = UUID.fromString(request.getJsonObject("owner").getString("id"));
-      String userEmail = request.getJsonObject("user").getString("email");
+      String userId = request.getJsonObject("user").getString("id");
       UUID itemId = UUID.fromString(request.getJsonObject("item").getString("itemId"));
       ItemType itemType =
           ItemType.fromTypeValue(request.getJsonObject("item").getString("itemType").toUpperCase());
       policyService
-          .initiateVerifyPolicy(ownerId, userEmail, itemId, itemType, user)
+          .initiateVerifyPolicy(ownerId, userId, itemId, itemType, user)
           .onComplete(
               handler -> {
                 if (handler.succeeded()) {
@@ -233,6 +422,51 @@ public class PolicyController implements ApiController {
       LOGGER.error("Error in verifyPolicy: {}", e.getMessage());
       ctx.fail(e);
     }
+  }
+
+  private void getConsumerPoliciesHandler(RoutingContext ctx) {
+    LOGGER.info("Handling getConsumerPolicies request...");
+    User user = ctx.user();
+
+    Map<String, String> allowedFilters =
+        Map.of("status", DB_STATUS, "organizationId", DB_ASSET_ORGANIZATION_ID);
+    Map<String, Object> additionalFilters = Map.of("consumer_id", user.subject());
+    Set<String> allowedTimeFields = Set.of(DB_CREATED_AT, DB_UPDATED_AT, DB_EXPIRY_AT);
+    Set<String> allowedSortFields = API_TO_DB_MAP.keySet();
+
+    PaginatedRequest request =
+        PaginationRequestBuilder.from(ctx)
+            .allowedFiltersDbMap(allowedFilters)
+            .apiToDbMap(API_TO_DB_MAP)
+            .additionalFilters(additionalFilters)
+            .allowedTimeFields(allowedTimeFields)
+            .defaultTimeField("created_at")
+            .defaultSort("updated_at", DEFAULT_SORTING_ORDER)
+            .allowedSortFields(allowedSortFields)
+            .build();
+
+    LOGGER.info("PaginatedRequest created for getActivityLogForConsumer:  {}", request);
+
+    policyService
+        .listPolicies(request)
+        .compose(policyService::enrichPolicyRequestsWithItemDetails)
+        .compose(policyService::enrichPolicyRequestsWithUserInfo)
+        .onSuccess(
+            pagedResult -> {
+              LOGGER.info("Successfully fetched access requests for user: {}", user.subject());
+              ResponseBuilder.sendSuccess(
+                  ctx,
+                  pagedResult.data().stream()
+                      .map(PolicyDto::toJson) // call toJson on each object
+                      .collect(Collectors.toList()),
+                  pagedResult.paginationInfo(),
+                  urnGenerator);
+            })
+        .onFailure(
+            err -> {
+              LOGGER.error("Error fetching access requests: {}", err.getMessage(), err);
+              ctx.fail(err);
+            });
   }
 
   /**
